src/portability.vapi
@@ -1,0 +1,5 @@
+[CCode (cheader_filename = "portability.h", lower_case_cprefix = "")]
+namespace Portability
+{
+    public void maybe_kill_orphan_engine ();
+}
